<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">
        
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titre"
        android:text="@string/titre" 
        android:textSize="27sp"
        android:typeface="serif"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
    	android:background="@color/blue"
    	android:paddingBottom="20dp"/>
	    
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/layout_horizontal_margin"
        android:gravity="center_horizontal">
	        
        <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:paddingRight="5dp">
        
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/montant"
		        android:text="@string/montant"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:typeface="serif"
		        android:paddingTop="5dp"
		        android:paddingBottom="20dp"/>
		    
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/localisation"
		        android:text="@string/localisation"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:typeface="serif"
		        android:paddingBottom="20dp"/>
		    
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/destination"
		        android:text="@string/destination"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:typeface="serif"/>
	    
    	</LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
    		android:paddingBottom="100dp" >
	        
	        <EditText
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/montantValue"
		        android:inputType="number"
		        android:hint="@string/montantValue"
		        android:textSize="15sp"
		        android:textStyle="italic"
		        android:paddingBottom="15dp"
		        android:layout_weight="1"/>
	        
	        <Spinner 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:id="@+id/localisationValue"
		        android:inputType="text"
		        android:textSize="15sp"
		        android:textStyle="italic"
	            android:paddingTop="12dp"
		        android:paddingBottom="10dp"
		        android:layout_weight="1" />

	        <Spinner
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:id="@+id/destinationValue"
	            android:inputType="text"
	            android:textSize="15sp"
	            android:textStyle="italic"
	            android:paddingTop="13dp"
	            android:layout_weight="1" />
	        
	    </LinearLayout>
	        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background2"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/layout_horizontal_margin" >

        <Button
            android:id="@+id/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            android:textAllCaps="false"
            android:typeface="serif" />
    </LinearLayout>
    
</LinearLayout>









